tests/expected_invalid_parse_missing_state_pattern_comma.diag.out
<input>:10:21: error: expected ',' between pattern bindings
            Pair { left right } => left,
                        ^^^^^
